--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
     </head>
     <body>
         <section id="sliderContainer"></section>
-        <section class="infos">
+        <section class="infosMap">
             <div id="map"></div>
-            <div id="stationInfos" class="stationInfos">
-                <p>Cliquez sur une station pour avoir toutes les informations la concernant.</p>
+            <div class="infos">
+                <div id="stationInfos" class="stationInfos">
+                    <p>Cliquez sur une station pour avoir toutes les informations la concernant.</p>
+                </div>
+                <div id="imgSignature"></div>
             </div>
             <div id ="signature" class="signature">
                 <h1>Merci de signer dans cette case et de valider pour confimer la réservation de votre vélo.</h1>
@@ -30,9 +33,14 @@
         <!-- Leaflet -->
         <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
         crossorigin=""></script>
+        <!-- JQuery -->
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <!-- script -->
-        <script type="text/javascript" src="ajax.js"></script>
-        <script type="text/javascript" src="script.js"></script>
+        <script type="text/javascript" src="js/ajax.js"></script>
+        <script type="text/javascript" src="js/classSlider.js"></script>
+        <script type="text/javascript" src="js/classLeaflet.js"></script>
+        <script type="text/javascript" src="js/classPaint.js"></script>
+        <script type="text/javascript" src="js/classTimer.js"></script>
+        <script type="text/javascript" src="js/script.js"></script>
     </body>
 </html>
