--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         </section>
         <div id="timer" class="timer">
             <p id="textTimer">1 vélo réservé à la station <span id="station"></span>  pour <span id="min"></span> min et <span id="sec"></span>s</p>
+            <p id="expired">Votre réservation a expirée !</p>
         </div>
         <!-- Leaflet -->
         <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
@@ -41,6 +42,7 @@
         <script type="text/javascript" src="js/classLeaflet.js"></script>
         <script type="text/javascript" src="js/classPaint.js"></script>
         <script type="text/javascript" src="js/classTimer.js"></script>
+        <script type="text/javascript" src="js/classBooking.js"></script>
         <script type="text/javascript" src="js/script.js"></script>
     </body>
 </html>
