refonte totale de la classe booking devenu BookingManager + modification du timer

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             </div>
             <div id ="signature" class="signature">
                 <h1>Merci de signer dans cette case et de valider pour confimer la réservation de votre vélo.</h1>
+                <p>Notez qu'une nouvelle réservation annulera la précendente. Merci</p>
                 <canvas id="canvas" class="canvas" width="500" height="300"></canvas>
                 <input type="button" value="Annuler" id="reset"/>
                 <input type="button" value="Valider" id="submit"/>
@@ -42,7 +43,7 @@
         <script type="text/javascript" src="js/classLeaflet.js"></script>
         <script type="text/javascript" src="js/classPaint.js"></script>
         <script type="text/javascript" src="js/classTimer.js"></script>
-        <script type="text/javascript" src="js/classBooking.js"></script>
+        <script type="text/javascript" src="js/classBookingManager.js"></script>
         <script type="text/javascript" src="js/script.js"></script>
     </body>
 </html>
