amelioration du code de la classe BookingManager, modifications css, correctif pour le touch dans le classe Paint

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <div id="imgSignature"></div>
             </div>
             <div id ="signature" class="signature">
-                <h1>Merci de signer dans cette case et de valider pour confimer la réservation de votre vélo.</h1>
-                <p>Notez qu'une nouvelle réservation annulera la précendente. Merci</p>
+                <h3 class="instruction">Merci de signer dans cette case et de valider pour confimer la réservation de votre vélo.</h1>
+                <p class="explanation">Notez qu'une nouvelle réservation annulera la précendente. Merci.</p>
                 <canvas id="canvas" class="canvas" width="500" height="300"></canvas>
                 <input type="button" value="Annuler" id="reset"/>
                 <input type="button" value="Valider" id="submit"/>
