--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE>
-<html>
+<!DOCTYPE html>
+<html lang="fr">
     <head>
         <title>Vélo'v Lyon</title>
         <meta charset="utf-8">
@@ -8,6 +8,10 @@
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" accesskey="" 
               integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
               crossorigin=""/>
+        <!-- Leaflet Marker Cluster -->
+        <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.css">
+        <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.Default.css">
+        <!-- style -->
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
@@ -21,11 +25,13 @@
                 <div id="imgSignature"></div>
             </div>
             <div id ="signature" class="signature">
-                <h3 class="instruction">Merci de signer dans cette case et de valider pour confimer la réservation de votre vélo.</h1>
+                <h3 class="instruction">Merci de signer dans cette case et de valider pour confimer la réservation de votre vélo.</h3>
                 <p class="explanation">Notez qu'une nouvelle réservation annulera la précendente. Merci.</p>
-                <canvas id="canvas" class="canvas" width="500" height="300"></canvas>
-                <input type="button" value="Annuler" id="reset"/>
-                <input type="button" value="Valider" id="submit"/>
+                <canvas id="canvas" class="canvas" width="300" height="250"></canvas>
+                <div class="buttonsCanvas">
+                    <input type="button" value="Annuler" id="reset"/>
+                    <input type="button" value="Valider" id="submit"/>
+                </div>
             </div>
         </section>
         <div id="timer" class="timer">
@@ -35,6 +41,8 @@
         <!-- Leaflet -->
         <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
         crossorigin=""></script>
+        <!-- Leaflet Marker Cluster--> 
+        <script src="https://unpkg.com/leaflet.markercluster@1.3.0/dist/leaflet.markercluster.js"></script>
         <!-- JQuery -->
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <!-- script -->
